6 October 2009: Wouter
	- retry for validation failure in DS and prime results. Less mem use.
	  unit test.  Provisioning in other tests for requeries.

6 October 2009: Wouter
	- Test set updated to provide additional ns lookup result.
	  The retry would attempt to fetch the data from other nameservers
	  for bogus data, and this needed to be provisioned in the tests.

5 October 2009: Wouter
	- first validation failure retry code.  Retries for data failures.
	  And unit test.

2 October 2009: Wouter
	- improve 5011 modularization.
	- fix unbound-host so -d can be given before -C.
	- iana portlist updated.

28 September 2009: Wouter
	- autotrust-anchor-file can read multiline input and $ORIGIN.
	- prevent integer overflow in holddown calculation. review fixes.
	- fixed race condition in trust point revocation. review fix.
	- review fixes to comments, removed unused code.

25 September 2009: Wouter
	- so-rcvbuf: 4m option added.  Set this on large busy servers to not
	  drop the occasional packet in spikes due to full socket buffers.
	  netstat -su keeps a counter of UDP dropped due to full buffers.
	- review of validator/autotrust.c, small fixes and comments.

23 September 2009: Wouter
	- 5011 query failed counts verification failures, not lookup failures.
	- 5011 probe failure handling fixup.
	- test unbound reading of original autotrust data.
	  The metadata per-key, such as key state (PENDING, MISSING, VALID) is
	  picked up, otherwise performs initial probe like usual.

22 September 2009: Wouter
	- autotrust test with algorithm rollover, new ordering of checks
	  assists in orderly rollover.
	- autotrust test with algorithm rollover to unknown algorithm.
	  checks if new keys are supported before adding them.
	- autotrust test with trust point revocation, becomes unsigned.
	- fix DNSSEC-missing-signature detection for minimal responses
	  for qtype DNSKEY (assumes DNSKEY occurs at zone apex).

18 September 2009: Wouter