@@ -1,6 +1,8 @@
 6 October 2009: Wouter
 	- retry for validation failure in DS and prime results. Less mem use.
 	  unit test.  Provisioning in other tests for requeries.
+	- retry for validation failure in DNSKEY in middle of chain of trust.
+	  unit test.
 
 6 October 2009: Wouter
 	- Test set updated to provide additional ns lookup result.
